--- a/src/styles/editProfilesModal.scss
+++ b/src/styles/editProfilesModal.scss
@@ -1,7 +1,7 @@
 .edit-profiles-modal {
     position: fixed;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
@@ -38,7 +38,9 @@
   
       .profiles-list {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
         gap: 15px;
   
         .profile-card {
