--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -13,10 +13,11 @@
 
 /* Formulario de login */
 section {
-    background: #22222257; /* Fondo oscuro para el formulario */
+    background-color: rgba(255, 255, 255, 0.1); /* Fondo claro semitransparente */
+    backdrop-filter: blur(10px); /* Efecto de vidrio esmerilado */
+    border-radius: 15px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     padding: 30px;
-    border-radius: 12px;
-    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.6);
     width: 300px;
     animation: fadeIn 0.5s ease-in-out;
     position: relative;
@@ -46,7 +47,7 @@ label {
     left: 15px;
     top: 18px;
     font-size: 16px;
-    color: #aaa;
+    color: #ffffff;
     transition: all 0.3s ease;
     pointer-events: none;
     z-index: 1;
