--- a/src/styles/profilesList.scss
+++ b/src/styles/profilesList.scss
@@ -1,8 +1,8 @@
 .profiles-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); /* Columnas de al menos 120px */
+  gap: 20px; /* Espacio entre perfiles */
+  justify-content: center; /* Centrado horizontal */
   margin-top: 20px;
 
   .profile-card {
