--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -21,6 +21,7 @@ section {
     width: 300px;
     animation: fadeIn 0.5s ease-in-out;
     position: relative;
+    text-align: center;
 }
 
 /* Animación de entrada */
