borrar el boton de eliminar perfiles

--- a/src/styles/profilesPage.scss
+++ b/src/styles/profilesPage.scss
@@ -93,24 +93,25 @@
   }
   
   .add-profile-button {
-    background: linear-gradient(to bottom, #00ff00, #006400); /* Gradiente verde */
+    background: rgb(73, 72, 72);
     color: white;
-    width: 80px;
-    height: 60px;
-    border-radius: 50%; /* Circular */
-    font-size: 2rem; /* "+" más grande */
+    width: 2em;
+    height: 2em;
+    border-radius: 10%;
+    font-size: 4em;
     font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
     border: none;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); /* Sombra suave */
-    transition: all 0.3s ease; /* Transición suave */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
   
     &:hover,
     &.focused {
       transform: scale(1.1); /* Escala al enfocar o hover */
-      box-shadow: 0 0 10px #00ff00; /* Glow verde */
+      box-shadow: 0 0 10px #ff0000; /* Glow verde */
+      background-color: #000;
     }
   
     &:disabled {
