--- a/src/styles/profilesPage.scss
+++ b/src/styles/profilesPage.scss
@@ -6,7 +6,7 @@
   color: var(--text-color, #fff);
   height: 100vh;
   margin: 0;
-  padding: 20px; // Añadir padding para TVs
+  padding: 2rem; // Añadir padding para TVs
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,73 +50,76 @@
       to { transform: rotate(360deg); }
     }
   }
+  .profiles-header{
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    .profiles-list {
+      display: grid;
+      grid-template-columns: auto;
+      gap: 20px;
+      margin-bottom: 20px;
+      width: 100%;
+      .profile-card {
+        background-color: var(--card-background, #222);
+        border: 2px solid var(--border-color, #444);
+        border-radius: 10px;
+        padding: 15px;
+        text-align: center;
+        transition: transform 0.3s ease, border-color 0.3s ease;
+        
+        &:hover,
+        &.focused {
+          transform: scale(1.05);
+          border-color: var(--primary-color, #007bff);
+          z-index: 1; // Evitar solapamiento
+        }
 
-  .profiles-list {
-    display: grid;
-    grid-template-columns: auto;
-    gap: 20px;
-    margin-bottom: 20px;
-    width: 100%;
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 5px;
+        }
 
-    .profile-card {
-      background-color: var(--card-background, #222);
-      border: 2px solid var(--border-color, #444);
-      border-radius: 10px;
-      padding: 15px;
-      text-align: center;
-      transition: transform 0.3s ease, border-color 0.3s ease;
+        p {
+          margin: 10px 0 0;
+          font-size: 1rem;
+        }
+      }
+    }
+
+    .actions {
+      display: flex;
+      gap: 15px; /* Espacio entre botones */
+      margin-top: 20px;
+    }
+
+    .add-profile-button {
+      background: rgb(73, 72, 72);
+      color: white;
+      width: 3em;
+      height: 2em;
+      border-radius: 10%;
+      font-size: 4em;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: none;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      transition: all 0.3s ease;
 
       &:hover,
       &.focused {
-        transform: scale(1.05);
-        border-color: var(--primary-color, #007bff);
-        z-index: 1; // Evitar solapamiento
+        transform: scale(1.1); /* Escala al enfocar o hover */
+        box-shadow: 0 0 10px #ff0000; /* Glow verde */
+        background-color: #000;
       }
 
-      img {
-        width: 100%;
-        height: auto;
-        border-radius: 5px;
+      &:disabled {
+        background: linear-gradient(to bottom, #666, #333); /* Gris cuando está deshabilitado */
+        cursor: not-allowed;
       }
-
-      p {
-        margin: 10px 0 0;
-        font-size: 1rem;
-      }
-    }
-  }
-
-  .actions {
-    display: flex;
-    gap: 15px; /* Espacio entre botones */
-    margin-top: 20px;
-  }
-  
-  .add-profile-button {
-    background: rgb(73, 72, 72);
-    color: white;
-    width: 2em;
-    height: 2em;
-    border-radius: 10%;
-    font-size: 4em;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease;
-  
-    &:hover,
-    &.focused {
-      transform: scale(1.1); /* Escala al enfocar o hover */
-      box-shadow: 0 0 10px #ff0000; /* Glow verde */
-      background-color: #000;
-    }
-  
-    &:disabled {
-      background: linear-gradient(to bottom, #666, #333); /* Gris cuando está deshabilitado */
-      cursor: not-allowed;
     }
   }
   
