segmentacion de los archivos de profiles

--- a/src/styles/Profile/profilesPage.scss
+++ b/src/styles/Profile/profilesPage.scss
@@ -1,6 +1,6 @@
 
 .profiles-page {
-  background-image: url("../media/BGbromteck.png");
+  background-image: url("../../media/BGbromteck.png");
   background-size: cover; /* Imagen de fondo en cover */
   background-color: var(--background-color, #000);
   color: var(--text-color, #fff);
