--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -134,3 +134,9 @@ button {
     text-align: center;
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.6);
 }
+
+.focused {
+  outline: 2px solid #fff;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
