--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -57,12 +57,13 @@ label {
 .password-toggle {
     position: absolute;
     right: 10px;
-    top: 50%;
+    top: 64%;
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 20px;
     color: #aaa;
     z-index: 2;
+    left: 75%;
 
     &:hover {
         color: #e50914; /* Color del ícono en hover */
@@ -133,10 +134,4 @@ button {
     max-width: 400px;
     text-align: center;
     box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.6);
-}
-
-.focused {
-  outline: 2px solid #fff;
-  border-radius: 4px;
-  background-color: rgba(255, 255, 255, 0.1);
 }
